<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/menu_item_selected"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/iv_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/btn_close_loadtask_selector"/>

        <TextView
            android:id="@+id/tv_loadtask_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="文件传输"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size_medium"/>

    </RelativeLayout>

    <View
        android:id="@+id/v_sep"
        style="@style/line_hor_gray"
        android:layout_below="@id/rl_title"
        android:layout_marginBottom="3dip"
        android:background="@color/dialog_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_sep"
        android:background="@color/menu_item_normal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/ftp_label_1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/ftp_translate"
            android:scaleType="fitXY"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ftp_label_2"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"/>

        <TextView
            android:id="@+id/txt_ftp_address_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/textview_corner"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/black_1"
            android:textSize="@dimen/font_small"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:text="@string/ftp_label_3"
            android:textColor="@color/white"
            android:textSize="@dimen/font_micro"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ftp_label_4"
                android:textColor="@color/white"
                android:textSize="@dimen/font_micro"/>

            <TextView
                android:id="@+id/txt_net_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="GDAS-GIG"
                android:textColor="@color/white"
                android:textSize="@dimen/font_micro"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:text="@string/ftp_label_5"
            android:textColor="@color/white"
            android:textSize="@dimen/font_micro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:padding="3dp"
            android:text="@string/ftp_label_6"
            android:textColor="@color/white"
            android:textSize="@dimen/font_micro"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="13dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="260dp"
                android:layout_height="58dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/sample"/>

            <TextView
                android:id="@+id/txt_ftp_address_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="116dp"
                android:layout_marginTop="38dp"
                android:text="ftp://192.168.1.100:7909"
                android:textColor="@color/blue"
                android:textSize="7sp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>