<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/rl_title"
        layout="@layout/layout_dialog_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="3dp"
        android:background="@color/menu_item_normal"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_switch_content"
            style="@style/Default_Dialog_TabLayout"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <View style="@style/default_dialog_space_line" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_file_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View style="@style/default_dialog_space_line_hor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/menu_item_normal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:drawableStart="@drawable/ic_dialog_file_list"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/menu"
                android:textColor="@color/white_7"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/ly_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_dialog_file_all" />

                <ImageView
                    android:id="@+id/iv_undo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/iv_select_all"
                    android:src="@drawable/ic_dialog_file_undo" />

                <TextView
                    android:id="@+id/tv_export"
                    android:layout_width="@dimen/dialog_bottom_menu_button_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/tv_loadtask_load_radius"
                    android:gravity="center"
                    android:padding="@dimen/dialog_bottom_menu_button_padding"
                    android:text="@string/export"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dialog_bottom_menu_button_text_size" />

                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="@dimen/dialog_bottom_menu_button_width"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dialog_bottom_menu_button_margin"
                    android:layout_toStartOf="@+id/tv_export"
                    android:background="@drawable/tv_loadtask_load_radius"
                    android:gravity="center"
                    android:padding="@dimen/dialog_bottom_menu_button_padding"
                    android:text="@string/delete"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dialog_bottom_menu_button_text_size" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>