<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_radius_corner"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/setting_simulator"
                android:textColor="@color/yellow"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/imgbtn_location"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dip"
                android:background="@drawable/btn_gps_selector" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="经 度："
                android:textColor="@color/white_7"
                android:gravity="right"
                android:textSize="@dimen/top_bar_font"/>

            <EditText
                android:id="@+id/et_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:paddingLeft="20dip"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textSize="@dimen/top_bar_font"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="纬 度："
                android:textColor="@color/white_7"
                android:gravity="right"
                android:textSize="@dimen/top_bar_font"/>

            <EditText
                android:id="@+id/et_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:paddingLeft="20dip"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textSize="@dimen/top_bar_font"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="高 度："
                android:textColor="@color/white_7"
                android:gravity="right"
                android:textSize="@dimen/top_bar_font"/>

            <EditText
                android:id="@+id/et_altitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:paddingLeft="20dip"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textSize="@dimen/top_bar_font"/>
        </LinearLayout>

        <View
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_light"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/red"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/gray_light" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>